--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage0": "https://shivam86010.github.io/3D_UI",
+  "homepage": "https://github.com/shivam86010/3D_UI",
   "name": "test",
   "private": true,
   "version": "0.0.0",
