--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://shivam86010.github.io/3D_UI",
-  "name": "test",
+  "name": "3d-ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
